# fast-readme-ai

./: .env.example  .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt  start.py
analyzer/: __init__.py  file_reader.py  repo_cloner.py  stack_detector.py
api/: __init__.py  main.py
api/routes/: readme.py
backend/: config.py  main.py
backend/models/: schemas.py
backend/routes/: readme.py
backend/services/: gemini_service.py
cli/: __init__.py  main.py
core/: __init__.py  engine.py
core/analyzer/: __init__.py  file_reader.py
core/generator/: __init__.py  mermaid_builder.py  prompt_builder.py
core/models/: __init__.py  schemas.py
core/scanner/: __init__.py  directory_tree.py  repo_cloner.py
core/services/: gemini_service.py
demo/: streamlit_app.py
examples/: sample_output_README.md
examples/sample_project/: package.json  requirements.txt
examples/sample_project/src/: app.py
generator/: __init__.py  mermaid_builder.py  prompt_builder.py  readme_writer.py
tests/: __init__.py  test_analyzer.py  test_api.py  test_cli.py  test_core_analyzer.py  test_core_generator.py  test_generator.py
